# machinekit-hal

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  COPYING  README.asciidoc  README.md  diff-debian.patch
scripts/: .gitignore  CMakeLists.txt  README.md  apt-installbuilddeps  build.sh  build_debian_docker_image  build_docker  build_packagecloud_upload  build_source_package  build_with_cnc  buildcontainerimage.py  check-system-configuration.sh  debian-distro-settings.json  fix-uuid  gen-rtapi.ini.sh.in.tmpl  githelper.sh  hal_demo  halrun.in  latency-test  linuxcnc.in  machinekit  machinekit.ini.tmpl.in  machinekit_hal_script_helpers.py  realtime.in  rip-environment.in  rtapi.in  runtests  runtests.in  set_env.in
scripts/buildsystem/debian/: README.md  base-entrypoint.sh
src/: .clang-format  .gitignore  CMakeLists.txt  CodingStyle  Makefile  Makefile.in  Makefile.inc.in  Makefile.modinc.in  README.config-changes  Submakefile.skel  autogen.sh  config.in  configure.ac  machinekitcfg.py-tmp.in  modsilent.py  rebrand  setup.py.in
src/emc/iotask/: Submakefile  ioControl.cc
src/emc/kinematics/: Submakefile
src/emc/motion/: Submakefile  control.c  mot_priv.h
src/emc/task/: Submakefile
src/emc/tp/: Submakefile  tp_types.h
src/emc/usr_intf/: Submakefile
src/executables/: CMakeLists.txt
src/executables/bitfile/: CMakeLists.txt
src/executables/comp/: CMakeLists.txt
src/executables/decode_protobuf/: CMakeLists.txt
src/executables/encdec/: CMakeLists.txt
src/executables/fix_uuid/: CMakeLists.txt
src/executables/halcmd/: CMakeLists.txt
src/executables/halrun/: CMakeLists.txt
src/executables/haltalk/: CMakeLists.txt
src/executables/inivar/: CMakeLists.txt
src/executables/instcomp/: CMakeLists.txt  instcomp.g
src/executables/linmove/: CMakeLists.txt
src/executables/messagebus/: CMakeLists.txt
src/executables/mklauncher/: CMakeLists.txt
src/executables/mksocmemio/: CMakeLists.txt
src/executables/mkwrapper/: CMakeLists.txt
src/executables/msgd/: CMakeLists.txt  rsyslogd-hal.conf
src/executables/mutexwatch/: CMakeLists.txt
src/executables/npbdecode/: CMakeLists.txt
src/executables/pci_read/: CMakeLists.txt
src/executables/pci_write/: CMakeLists.txt
src/executables/position/: CMakeLists.txt
src/executables/ppioctl/: CMakeLists.txt
src/executables/rawread/: CMakeLists.txt
src/executables/realtime/: CMakeLists.txt
src/executables/rtapi_app/: CMakeLists.txt
src/executables/rtprintf/: CMakeLists.txt
src/executables/sizes/: CMakeLists.txt
src/executables/test_rtapi_vsnprinf/: CMakeLists.txt
src/executables/unionread/: CMakeLists.txt
src/executables/varint/: CMakeLists.txt
src/executables/webtalk/: CMakeLists.txt  Submakefile  wszmqproxy-test.py  zws-chat-server.py
src/hal/: CMakeLists.txt
src/hal/accessor/: acctest.amd64.s  acctest.arm.s  acctest.c  acctest.x86-32.s
src/hal/classicladder/: Submakefile
src/hal/components/: CMakeLists.txt  Submakefile  adc.comp  adc8.comp  bldc.comp  counter.c  delayline.c  encoder.c  encoder_ratio.c  encoder_ratiov2.c  encoderv2.c  hal_pru.c  hal_prudebug.c  lcd.c  matrix_kb.c  mesa_pktgyro_test.comp  mux_generic.c  pepper.c  pwmgen.c  pwmgenv2.c  rtfault.comp  rtmon.comp  sampler.c  sampler_latency_usr.c  sampler_usr.c  siggen.c  sim_encoder.c  stepgen.c  stepgenv2.c  streamer.c  streamer.h  streamer_usr.c  thc.comp  thcud.comp  threads.c  vari_bit_adc.comp
src/hal/cython/: CMakeLists.txt  Submakefile
src/hal/drivers/: CMakeLists.txt  Submakefile  gm.h  hal_arm335xQEP.c  hal_arm335xQEP.h  hal_ax5214h.c  hal_chip_gpio.c  hal_evoreg.c  hal_gm.c  hal_gpio.c  hal_gpio_h3.c  hal_motenc.c  hal_p260c.c  hal_parport.c  hal_ppmc.c  hal_skeleton.c  hal_speaker.c  hal_spi.c  hal_stg.c  hal_tiro.c  hal_vti.c  hal_vti.h  hal_zed_can.c  hal_zed_gpio.c  mesa_7i65.comp  mesa_uart.comp  motenc.h  opto_ac5.c  opto_ac5.h  pci_8255.c  pluto_common.h  probe_parport.c
src/hal/i_components/: CMakeLists.txt  Submakefile  at_pid.icomp  at_pidv2.icomp  clarkeinv.icomp  clarkeinvv2.icomp  hypot.icomp  hypotv2.icomp  invert.icomp  invertv2.icomp  io_muxn.icomp  io_muxnv2.icomp  led_dim.icomp  led_dimv2.icomp  limit3.icomp  limit3v2.icomp  maxn.icomp  maxnv2.icomp  minn.icomp  minnv2.icomp  near.icomp  nearv2.icomp  resetv2.icomp  sim_spindle.icomp  time.icomp  (+6 more)
src/inifile/: Submakefile  inifile.cc  inivar.cc
src/libnml/: CMakeLists.txt  Submakefile
src/libraries/: CMakeLists.txt
src/m4/: ac_pkg_cython.m4
src/machinetalk/: CMakeLists.txt  Submakefile
src/module_helper/: module_helper.c
src/modules/: CMakeLists.txt
src/po/: Submakefile  de.po  es.po  fi.po  fr.po  hu.po  it.po  ja.po  pl.po  pt_BR.po  ro.po  ru.po  sk.po  sr.po  sv.po  zh_CN.po  zh_HK.po  zh_TW.po
src/rtapi/: .gitignore  CMakeLists.txt  README  Submakefile  flavor.c  librtapi.c  rsyslogd-hal.conf  rsyslogd-machinekit.conf  rt-preempt.c  rt-preempt.h  rtai-kernel.c  rtapi.c  rtapi.h  rtapi.h.in  rtapi_app.cc  rtapi_app.h  rtapi_app_module.hh  rtapi_atomics.h  rtapi_bitops.h  rtapi_bool.h  rtapi_common.c  rtapi_common.h  rtapi_compat.c  rtapi_compat.h  rtapi_ctype.h  rtapi_exception.c  rtapi_exception.h  rtapi_export.h  rtapi_flavor.c  rtapi_flavor.h  rtapi_global.h  rtapi_heap.c  rtapi_heap.h  rtapi_hexdump.c  rtapi_int.h  rtapi_io.h  rtapi_limits.h  rtapi_main.c  rtapi_math.h  rtapi_math64.h  (+17 more)
tests/: .gitignore  CMakeLists.txt  README  run_runtests.in
tests/cpusets/: skip
tests/hal-link-unlink/: hallink.py
tests/halmodule.0/: expected  test.py
tests/hm2-idrom/: skip  test.sh
tests/limit3v2/: checkresult
tests/nosetests/: conftest.py  rtapilog.py  runpytest.sh  test_compat.py  test_groups.py  test_icomp.py  test_instbindings.py  test_mk_hal_basics.py  test_netcmd.py  test_or2.py  test_pinops.py  test_ring.py  test_ring_intracomp.py  test_ringdemo.py  test_rtapi.py  test_streamring.py
tests/pll_correction/: checkresult
tests/rtapi.0/: expected  rtapi_test.c  test.sh
tests/runtests/: README.asciidoc
tests/symbols.0/: checkresult
tests/threads.0/: checkresult
(+2284 files in other folders)
